# imrtv2

./: .gitignore  b16.txt  clean_dataset.py  data_augmentation.py  data_augmentation2.py  download_dataset.py  downsize_images.py  evaluate_model.py  main.py  n_main.py  parameters_count.py  patch_image.py  preload.py  pyproject.toml  resize_dataset.py  run_all_models.py  split_dataset.py  split_dataset_pld.py  train_a.py  train_archieve.py  train_b.py  train_c.py  train_d.py
configs/: config.yaml  train_config.yaml
configs/dataset/: Car_Accessories.yaml  chest_X_ray.yaml  customized.yaml
configs/network/: coatnet_1.yaml  coatnet_2.yaml  coatnet_3.yaml  coatnet_3_reg.yaml  coatnet_4.yaml  coatnet_5.yaml
data/: builder.py  dataset.py  transforms.py
src/: bridge.py  builder.py  config.py  evaluate.py  evaluate_model.py  frozen_vit.py  loss.py  models.py  scheduler.py  side_vit.py  side_vit_cnn.py
src/data/: dataset.py
src/engine/: core.py
src/losses/: proxy_anchor.py
src/model/: bridge.py  builder.py  models.py  old_models.py  side_vit.py
src/utils/: const.py  func.py  metrics.py  peme.py
utils/: data_augmentation.py  downsize_images.py  same_size.py  split_dataset.py
