[project]
name = "imrtV2"
version = "0.1.0"
description = ""
authors = [
  {name = "a.espahbodi", email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.54.1,<5.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "huggingface-hub (>=0.34.3,<0.35.0)",
    "timm (>=1.0.19,<2.0.0)",
    "torcheval (>=0.0.7,<0.0.8)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "ruff (>=0.12.7,<0.13.0)",
    "torchmetrics (>=1.8.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
]

[tool.poetry]
name = "MIC"
version = "0.1.0"
description = ""
authors = ["a.espahbodi <dev.amir.espahbodi@gmail.com>"]
packages = [{include = "*", from = "."}]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
